[package]
name = "esperanto-text"
version = "1.0.0"
authors = ["Thomas Karpiniec <tom.karpiniec@outlook.com>"]
edition = "2018"
description = "Convert Esperanto text between UTF-8, x-system and h-system transliterations"
readme = "README.md"
license = "MIT"
categories = ["internationalization", "text-processing"]
keywords = ["esperanto", "string", "text", "transliteration"]
homepage = "https://github.com/thombles/esperanto-text"
repository = "https://github.com/thombles/esperanto-text"

[dependencies]
aho-corasick = "0.7"
